--- a/ins_prometheus.yml
+++ b/ins_prometheus.yml
@@ -39,7 +39,10 @@
      path: /opt/prometheus-2.21.0.linux-amd64
      state: absent
   - name: prometheus yml file edit
-    shell: cat pn_yml >>/etc/prometheus/prometheus.yml 
+    copy: 
+     content: pn_yml
+     dest: /tmp/
+    shell: cat /tmp/pn_yml >>/etc/prometheus/prometheus.yml 
   - name: Copy systemd init file
     template:
      src: prometheus.service_j1
