--- a/ins_prometheus.yml
+++ b/ins_prometheus.yml
@@ -39,9 +39,9 @@
      path: /opt/prometheus-2.21.0.linux-amd64
      state: absent
   - name: Specifying a destination path
-    fetch:
-     src: pn_yml
-     dest: /tmp/
+    copy:
+     src: /jbs/jb-git/optit/pn_yml
+     dest: /tmp/pn_yml
   - name: prometheus yml file copy
     shell: cat /tmp/pn_yml >>/etc/prometheus/prometheus.yml 
   - name: Copy systemd init file
