--- a/docker_create_push.yml
+++ b/docker_create_push.yml
@@ -13,5 +13,5 @@
   - name: Create docker image
     docker_image:
      path: /opt/
-     name: jb_prometheus
+     name: jangbsingh/jb_prometheus:v02
    
