--- a/docker_create_push.yml
+++ b/docker_create_push.yml
@@ -14,6 +14,11 @@
     docker_image:
      path: /opt/
      name: jb_prometheus
+  - name: Log into DockerHub
+    docker_login:
+     username: jangbsingh
+     password: jang@7376
+     email: jangbahadur0@gmail.com
   - name: Tag and push to docker hub
     docker_image:
      name: jb_prometheus:latest
