--- a/docker_create_push.yml
+++ b/docker_create_push.yml
@@ -14,6 +14,7 @@
     docker_image:
      path: /opt/
      name: jb_prometheus
+     tag: v2.0
   - name: Log into DockerHub
     docker_login:
      username: jangbsingh
