--- a/nginx_deployment.yml
+++ b/nginx_deployment.yml
@@ -16,7 +16,7 @@ spec:
   spec:
    containers:
    - name: nginx
-     images: nginx:latest
+     image: nginx:latest
      ports:
      - containerPort:8080
 
