--- a/tomcat_deployment.yml
+++ b/tomcat_deployment.yml
@@ -16,6 +16,6 @@ spec:
   spec:
    containers:
    - name: tomcat
-     image: jbs-tomcat:latest
+     image: jangbsingh/jbs-tomcat:latest
      ports:
      - containerPort: 8080
