--- a/kube-create.yml
+++ b/kube-create.yml
@@ -1,5 +1,5 @@
 - name: copy kube yml file
-  hosts: JB-Ubuntu
+  hosts: JB-local
   become: True
   tasks:
   - name: copy nginx deplyment yml file 
