--- a/tomcat_service.yml
+++ b/tomcat_service.yml
@@ -3,11 +3,10 @@ kind: Service
 metadata:
  name: tomcat-service
 spec:
- type: NodePort
+ type: ClusterIP
  selector:
   app: tomcat
  ports:
   - protocol: TCP
     port: 8080
     targetPort: 8080
-    nodePort: 30001 
