--- a/kube-create.yml
+++ b/kube-create.yml
@@ -18,3 +18,7 @@
     copy:
      src: tomcat_service.yml
      dest: /opt/
+  - name: copy civo config file
+    copy:
+     src: civo-k83-kubeconfig
+     dest: /opt/
