--- a/kube-create.yml
+++ b/kube-create.yml
@@ -22,3 +22,5 @@
     copy:
      src: civo-k83-kubeconfig
      dest: /opt/
+  - name: Run command civo config
+    command: export KUBECONFIG=/opt/civo-k83-kubeconfig
