--- a/kube-create.yml
+++ b/kube-create.yml
@@ -18,3 +18,6 @@
     copy:
      src: tomcat_service.yml
      dest: /opt/
+  - name: 
+    shell: 'export KUBECONFIG=/opt/civo-k83-kubeconfig'
+    sudo: yes
