--- a/kube-create.yml
+++ b/kube-create.yml
@@ -18,6 +18,6 @@
     copy:
      src: tomcat_service.yml
      dest: /opt/
-  - name: 
+  - name: civo run
     shell: 'export KUBECONFIG=/opt/civo-k83-kubeconfig'
     sudo: yes
